# torus

./: .gitignore  Cargo.toml  LANGUAGE.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: decode.rs  language.rs  main.rs  symbol.rs  word_primes.rs
static/: index.html
