[package]
name = "torus"
version = "0.1.0"
edition = "2021"
description = "A circular logographic writing system inspired by Arrival"
license = "MIT"
repository = "https://github.com/StevenGeller/torus"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
resvg = "0.47"
tower-http = { version = "0.6", features = ["catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
